[package]
name = "delicia"
version = "0.1.0"
authors = ["Francisco Revilla <francisco.revilla@infarm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros", "time", "net"] }
rand = "0.8.3"